add build-conventions and build-tools modules. add dependencies for apache http components. remove dependencies for elasticsearch low level rest client

--- a/restaurant-recommender-java/build-conventions/settings.gradle
+++ b/restaurant-recommender-java/build-conventions/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'my-org-conventions'
+rootProject.name = 'build-conventions'
 
 dependencyResolutionManagement {
     versionCatalogs {
