--- a/restaurant-recommender-java/buildSrc/build.gradle
+++ b/restaurant-recommender-java/buildSrc/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'groovy-gradle-plugin'
+    id 'java-gradle-plugin'
 }
 
 repositories {
-    gradlePluginPortal() // so that external plugins can be resolved in dependencies section
+    gradlePluginPortal()
 }
 
 dependencies {
@@ -12,9 +13,10 @@ dependencies {
     testImplementation 'org.spockframework:spock-core'
 }
 
-project.logger.lifecycle('my message visible by default')
-
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+
+
 
