--- a/restaurant-recommender-java/lowlevel-restclient/build.gradle
+++ b/restaurant-recommender-java/lowlevel-restclient/build.gradle
@@ -1,28 +1,37 @@
+
 plugins {
     id 'java-conventions'
     id 'java-library'
-    id "com.github.johnrengelman.shadow" version "7.1.2"
+//    id "com.github.johnrengelman.shadow" version "7.1.2"
 }
+
 
 dependencies {
 
-    api('org.elasticsearch.client:elasticsearch-rest-client:8.4.3')
-
-    api("io.github.classgraph:classgraph:4.8.149")
-
+//    api('org.elasticsearch.client:elasticsearch-rest-client:8.4.3')
     api("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
-    
-    shadowJar {
-        relocate 'org.apache.http', 'hidden.org.apache.http'
-        relocate 'org.apache.logging', 'hidden.org.apache.logging'
-        relocate 'org.apache.commons.codec', 'hidden.org.apache.commons.codec'
-        relocate 'org.apache.commons.logging', 'hidden.org.apache.commons.logging'
-    }
 
+    api "org.apache.httpcomponents:httpclient:${httpclientVersion}"
+    api "org.apache.httpcomponents:httpcore:${httpcoreVersion}"
+    api "org.apache.httpcomponents:httpasyncclient:${httpasyncclientVersion}"
+    api "org.apache.httpcomponents:httpcore-nio:${httpcoreVersion}"
+    api "commons-codec:commons-codec:${commonscodecVersion}"
+    api "commons-logging:commons-logging:${commonsloggingVersion}"
+
+//    shadowJar {
+//        relocate 'org.apache.http', 'hidden.org.apache.http'
+//        relocate 'org.apache.logging', 'hidden.org.apache.logging'
+//        relocate 'org.apache.commons.codec', 'hidden.org.apache.commons.codec'
+//        relocate 'org.apache.commons.logging', 'hidden.org.apache.commons.logging'
+//    }
 //shadowJar {
 //    dependencies {
 //        exclude(dependency('org.apache.logging.log4j:log4j-core:2.11.1'))
 //    }
 //}
-    //
 }
+//tasks.named("processResources").configure {
+//    expand versions: [
+//            elasticsearch: VersionProperties.getRestaurantRecommender()
+//    ]
+//}
