--- a/restaurant-recommender-java/lowlevel-restclient/build.gradle
+++ b/restaurant-recommender-java/lowlevel-restclient/build.gradle
@@ -17,12 +17,20 @@ ext {
 
 dependencies {
 
+    implementation('org.slf4j:slf4j-api:1.8.0-beta2')
+    implementation('ch.qos.logback:logback-classic:1.3.0-alpha4')
+    implementation('org.slf4j:jcl-over-slf4j:1.8.0-beta2')
+
     api "org.apache.httpcomponents:httpclient:${httpclientVersion}"
     api "org.apache.httpcomponents:httpcore:${httpcoreVersion}"
     api "org.apache.httpcomponents:httpasyncclient:${httpasyncclientVersion}"
     api "org.apache.httpcomponents:httpcore-nio:${httpcoreVersion}"
     api "commons-codec:commons-codec:${commonscodecVersion}"
-    api "commons-logging:commons-logging:${commonsloggingVersion}"
+    
+    configurations.all {
+        exclude group: "commons-logging", module: "commons-logging"
+    }
+//    api "commons-logging:commons-logging:${commonsloggingVersion}"
 
 }
 
