test parsing json stream from BusinessSearchResponse and BusinessDetailsResponse

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-
-
-
 # Ignore Gradle project-specific cache directory
 .gradle
 
@@ -9,20 +6,39 @@ build
 build/build
 
 
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+.classpath
+.project
+.settings/
 
+*-cs-cleanup.xml
+*-cs-formatter.xml
 .checkstyle
 .idea/
 *.iml
 *.ipr
 *.iws
 
-
-
 images/*
+build/
+*/build/
+
 build-conventions/*
 build-tools/*
-jar*
-gradlew
 
+gradle/
+gradlew*
+*.gradlew
 *.jar
 *.bat
+
+yelp-fusion-client/*/test/*/*/*/yelp/fusion/client/business/model/*
