--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id "com.dorongold.task-tree" version "2.1.0"
     id 'maven-publish'
     id 'signing'
+    id 'idea'
 }
 
 group = 'io.github.stewseo'
@@ -28,7 +29,7 @@ repositories {
 }
 
 jar {
-    archiveBaseName = 'yelp-fusion-client'
+    archiveFileName = 'yelp-fusion-client'
     archiveVersion = '1.0.2'
     from {
         configurations.compileClasspath.filter{ it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
@@ -161,7 +162,6 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
 }
-
 
 tasks.named('test') {
     useJUnitPlatform()
