--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,17 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: yelp-fusion-client
-email: stewart.s.seo.com
+email: stewart.s.seo.@gmailcom
 description: >- # this means to ignore newlines until "baseurl:"
-<<<<<<< HEAD
 baseurl: "" # the subpath of your site, e.g. /blog
-=======
 yelp fusion java client.
-baseurl: "java-client" # the subpath of your site, e.g. /blog
->>>>>>> c46746d7c2eef620f69e7456766873d49903d5d0
 url: "https://stewseo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  stewseo
 
 # Build settings
 theme: minima
