--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'io.github.stewseo'
-version = '1.0.2'
+version = '1.0.4'
 
 java {
     sourceCompatibility = "17"
@@ -30,7 +30,7 @@ repositories {
 
 jar {
     archiveFileName = 'yelp-fusion-client'
-    archiveVersion = '1.0.2'
+    archiveVersion = '1.0.4'
     from {
         configurations.compileClasspath.filter{ it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
     }
@@ -104,13 +104,13 @@ ext {
     jakartaJsonBindVersion = '2.0.0'
     parssonVersion = '1.0.0'
     // commons
-    commonscodecVersion = '1.11'
-    commonsioVersion = '2.4'
-    commonsloggingVersion = '1.2'
+//    commonscodecVersion = '1.11'
+//    commonsioVersion = '2.4'
+//    commonsloggingVersion = '1.2'
     // http components
-    httpasyncclientVersion = '4.1.5'
-    httpcoreVersion = '4.4.12'
-    httpclientVersion = '4.5.10'
+//    httpasyncclientVersion = '4.1.5'
+//    httpcoreVersion = '4.4.12'
+//    httpclientVersion = '4.5.10'
     // logging
     slf4jVersion = '2.0.4'
     logbackVersion = '1.4.1'
@@ -119,6 +119,7 @@ ext {
 }
 
 dependencies {
+    implementation project(":lowlevel-restclient")
 
     // elasticsearch
     api("co.elastic.clients:elasticsearch-java:${elasticsearchVersion}")
@@ -130,25 +131,7 @@ dependencies {
     api("com.fasterxml.jackson.core:jackson-core:${jacksonVersion}")
     api("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
 
-    // apache commons
-    api("commons-io:commons-io:${commonsioVersion}")
-    api("commons-codec:commons-codec:${commonscodecVersion}")
-
-    // apache http components
-    api "org.apache.httpcomponents:httpclient:${httpclientVersion}"
-    api "org.apache.httpcomponents:httpcore:${httpcoreVersion}"
-    api "org.apache.httpcomponents:httpasyncclient:${httpasyncclientVersion}"
-    api "org.apache.httpcomponents:httpcore-nio:${httpcoreVersion}"
-
     api 'gg.jte:jte:2.2.3'
-
-    // loggers
-    api("org.slf4j:slf4j-api:${slf4jVersion}")
-    api("ch.qos.logback:logback-classic:${logbackVersion}")
-    api("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
-    configurations.all {
-        exclude group: "commons-logging", module: "commons-logging"
-    }
 
     // testing
     testImplementation("org.eclipse:yasson:2.0.4") {
@@ -169,24 +152,22 @@ tasks.named('test') {
 
 test {
     filter {
-        //exclude all tests from a package.
-//        excludeTestsMatching "io.github.yelp.fusion.client.response.*"
-        excludeTestsMatching "io.github.yelp.fusion.client.end_to_end.*"
-        excludeTestsMatching "io.github.yelp.fusion.client.aggregation.*"
-        excludeTestsMatching "io.github.yelp.fusion.client.json.*"
-        excludeTestsMatching "io.github.yelp.fusion.client.restclient.*"
-        excludeTestsMatching "io.github.yelp.fusion.client.document.*"
+
+//        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.response.*"
+//        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.end_to_end.*"
+//        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.aggregation.*"
+//        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.end_to_end.*"
+//        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.yelpfusion.*"
+//        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.yelpfusion.autocomplete.*"
+//        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.util.*"
+//        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.json.*"
+//        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.document.*"
+//        excludeTestsMatching "io.github.stewseo.lowlevel.restclient.RestClientTest"
+//        excludeTestsMatching "io.github.stewseo.lowlevel.restclient.ExecutionTests"
+//        excludeTestsMatching "io.github.stewseo.lowlevel.restclient.response.ResponseBodyTest"
     }
 }
 
-//
-//tasks.create('printOssr'){
-//    println findProperty('signing.keyId')
-//    println findProperty('signing.password')
-//    println findProperty('signing.secretKeyRingFile')
-//    println findProperty('ossrhUsername')
-//    println findProperty('ossrhPassword')
-//}
 
 tasks.named('taskTree').configure {
     depth = 3 // limit tree depth to 3. Equivalent to the --depth CLI task option.
