--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,10 +21,9 @@
 title: yelp-fusion-client
 email: stewart.s.seo.@gmailcom
 description: >- # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
-yelp fusion java client.
+baseurl: "/yelp-fusion-client" # the subpath of your site, e.g. /blog
 url: "https://stewseo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+twitter_username: none
 github_username:  stewseo
 
 # Build settings
