--- a/build.gradle
+++ b/build.gradle
@@ -105,16 +105,6 @@ ext {
     jakartaJsonBindVersion = '2.0.0'
     parssonVersion = '1.0.0'
 
-    // commons
-    commonscodecVersion = '1.11'
-    commonsioVersion = '2.4'
-    commonsloggingVersion = '1.2'
-
-    // http components
-    httpasyncclientVersion = '4.1.5'
-    httpcoreVersion = '4.4.12'
-    httpclientVersion = '4.5.10'
-
     // logging
     slf4jVersion = '2.0.4'
     logbackVersion = '1.4.1'
@@ -124,7 +114,7 @@ ext {
 }
 
 dependencies {
-
+    api project(":lowlevel-restclient")
     // elasticsearch
     api("co.elastic.clients:elasticsearch-java:${elasticsearchVersion}")
 
@@ -135,23 +125,13 @@ dependencies {
     api("com.fasterxml.jackson.core:jackson-core:${jacksonVersion}")
     api("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
 
-    // apache commons
-    api("commons-io:commons-io:${commonsioVersion}")
-    api("commons-codec:commons-codec:${commonscodecVersion}")
-
-    // apache http components
-    api "org.apache.httpcomponents:httpclient:${httpclientVersion}"
-    api "org.apache.httpcomponents:httpcore:${httpcoreVersion}"
-    api "org.apache.httpcomponents:httpasyncclient:${httpasyncclientVersion}"
-    api "org.apache.httpcomponents:httpcore-nio:${httpcoreVersion}"
-
     // loggers
-    api("org.slf4j:slf4j-api:${slf4jVersion}")
-    api("ch.qos.logback:logback-classic:${logbackVersion}")
-    api("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
-    configurations.all {
-        exclude group: "commons-logging", module: "commons-logging"
-    }
+//    api("org.slf4j:slf4j-api:${slf4jVersion}")
+//    api("ch.qos.logback:logback-classic:${logbackVersion}")
+//    api("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
+//    configurations.all {
+//        exclude group: "commons-logging", module: "commons-logging"
+//    }
     api 'gg.jte:jte:2.2.3'
 
     // testing
@@ -186,7 +166,6 @@ tasks.named('test') {
 
 test {
     filter {
-
 //        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.response.*"
 //        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.end_to_end.*"
 //        excludeTestsMatching "io.github.stewseo.yelp.fusion.client.aggregation.*"
