--- a/lowlevel-restclient/build.gradle
+++ b/lowlevel-restclient/build.gradle
@@ -2,8 +2,13 @@ plugins {
     id 'java-library'
 }
 
-group 'io.github.stewseo'
-version '1.0.52'
+group = 'io.github.stewseo'
+version = '1.0.63'
+
+java {
+    sourceCompatibility = "17"
+    targetCompatibility = "17"
+}
 
 repositories {
     mavenCentral()
@@ -51,6 +56,8 @@ dependencies {
     }
 }
 
-test {
-    useJUnitPlatform()
-}
+
+
+
+
+
