--- a/build.gradle
+++ b/build.gradle
@@ -115,10 +115,11 @@ ext {
 }
 
 dependencies {
-    api files("libs/lowlevel-restclient-1.0.62.jar")
+    api files("libs/lowlevel-restclient-1.0.63.jar")
 //    api project(":lowlevel-restclient")
+
     // elasticsearch
-    api("co.elastic.clients:elasticsearch-java:${elasticsearchVersion}")
+    implementation("co.elastic.clients:elasticsearch-java:${elasticsearchVersion}")
 
     // json
     api("org.eclipse.parsson:parsson:${parssonVersion}")
@@ -128,6 +129,10 @@ dependencies {
     api("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
 
     api 'gg.jte:jte:2.2.3'
+
+    api("org.slf4j:slf4j-api:${slf4jVersion}")
+    api("ch.qos.logback:logback-classic:${logbackVersion}")
+    api("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
 
     // testing
     testImplementation("org.eclipse:yasson:2.0.4") {
