--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 rootProject.name = 'yelp-fusion-client'
 include 'lowlevel-restclient'
-
+include 'temporaldata'
 //List projects = [
 //        'lowlevel-restclient'
 //]
