--- a/build.gradle
+++ b/build.gradle
@@ -168,11 +168,11 @@ test {
         excludeTestsMatching "io.*.*.lowlevel.restclient.*"
         excludeTestsMatching "io.*.*.yelp.*.client.connection.*"
         excludeTestsMatching "io.*.*.yelp.*.client.end_to_end.*"
-        excludeTestsMatching "io.*.*.yelp.*.client.json.*"
+//        excludeTestsMatching "io.*.*.yelp.*.client.json.*"
         excludeTestsMatching "io.*.*.yelp.*.client.util.*"
-        excludeTestsMatching "io.*.*.yelp.*.client.yelpfusion.business.*"
-        excludeTestsMatching "io.*.*.yelp.*.client.yelpfusion.categories.*"
-        excludeTestsMatching "io.*.*.yelp.*.client.yelpfusion.event.*"
+//        excludeTestsMatching "io.*.*.yelp.*.client.yelpfusion.business.*"
+//        excludeTestsMatching "io.*.*.yelp.*.client.yelpfusion.categories.*"
+//        excludeTestsMatching "io.*.*.yelp.*.client.yelpfusion.event.*"
     }
 }
 
