--- a/temporaldata/build.gradle
+++ b/temporaldata/build.gradle
@@ -2,8 +2,13 @@ plugins {
     id 'java-library'
 }
 
+java {
+    sourceCompatibility = "17"
+    targetCompatibility = "17"
+}
+
 group 'io.github.stewseo'
-version '1.0.64'
+version '1.0.7'
 
 repositories {
     mavenCentral()
@@ -15,7 +20,6 @@ dependencies {
     api 'com.breinify:brein-time-utilities:1.8.0'
     api 'com.mashape.unirest:unirest-java:1.4.9'
     api 'com.sun.jersey:jersey-client:1.19.4'
-//    api 'com.google.maps:google-maps-services:2.1.2'
 }
 
 task javadocJar(type: Jar) {
@@ -34,14 +38,10 @@ repositories {
 
 jar {
     archiveFileName = 'temporaldata.jar'
-    archiveVersion = '1.0.64'
+    archiveVersion = '1.0.7'
     from {
         configurations.compileClasspath.filter{ it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
     }
 
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
 }
