--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,35 @@
+import java.text.SimpleDateFormat
+
 plugins {
     id 'java-library'
-    id "com.dorongold.task-tree" version "2.1.0"
+//    id "com.dorongold.task-tree" version "2.1.0"
     id 'maven-publish'
     id 'signing'
     id 'idea'
+    id 'jacoco'
+    id "com.github.dawnwords.jacoco.badge" version "0.2.4"
+    id "org.ajoberstar.grgit" version "1.7.2"
 }
 
+
 group = 'io.github.stewseo'
-version = '1.0.7'
+
+version = file("$projectDir/config/version.txt").text.trim()
+
+task versionTxt()  {
+    doLast {
+        new File(projectDir, "config/version.txt").text = """
+Version: $version
+Revision: ${grgit.head().abbreviatedId}
+Buildtime: ${new SimpleDateFormat("dd-MM-yyyy HH:mm:ss").format(new Date())}
+Application-name: yelp-fusion java client
+"""
+    }
+}
+
+if (hasProperty('version')) {
+    version = file("$projectDir/config/version.txt").text.trim()
+}
 
 java {
     sourceCompatibility = "17"
@@ -24,10 +46,6 @@ task sourcesJar(type: Jar) {
     from sourceSets.main.allSource
 }
 
-repositories {
-    mavenCentral()
-}
-
 jar {
     archiveFileName = 'yelp-fusion-client'
     archiveVersion = '1.0.7'
@@ -39,6 +57,7 @@ jar {
 }
 
 publishing {
+
     repositories {
         maven {
             name = "ossrh"
@@ -49,6 +68,7 @@ publishing {
             }
         }
     }
+
     publications {
         mavenJava(MavenPublication) {
             from components.java
@@ -104,6 +124,11 @@ signing {
     sign publishing.publications.mavenJava
 }
 
+
+repositories {
+    mavenCentral()
+}
+
 ext {
     // elasticsearch
     elasticsearchVersion = "8.5.2"
@@ -123,10 +148,9 @@ ext {
 }
 
 dependencies {
-
-    api files("libs/lowlevel-restclient.jar")
-    api files ("libs/temporaldata.jar")
-//    api project (":temporaldata")
+//    api project(":lowlevel-restclient")
+    api files("lowlevel-restclient/build/libs/lowlevel-restclient.jar")
+    api files ("temporaldata/build/libs/temporaldata.jar")
 
     // elasticsearch
     implementation("co.elastic.clients:elasticsearch-java:${elasticsearchVersion}")
@@ -143,7 +167,6 @@ dependencies {
     api("org.slf4j:slf4j-api:${slf4jVersion}")
     api("ch.qos.logback:logback-classic:${logbackVersion}")
     api("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
-    implementation 'org.jetbrains:annotations:20.1.0'
 
     // testing
     testImplementation("org.eclipse:yasson:2.0.4") {
@@ -153,28 +176,54 @@ dependencies {
 
     testImplementation("io.github.classgraph:classgraph:4.8.147")
 
+//    testImplementation 'org.testcontainers:elasticsearch:1.17.6'
     testImplementation 'org.assertj:assertj-core:3.23.1'
     testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
+
+
+jacoco {
+    toolVersion = "0.8.8"
+    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+        csv.enabled true
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
+    dependsOn test // tests are required to run before generating the report
+}
+
+jacocoBadgeGenSetting {
+    jacocoReportPath  "$buildDir/customJacocoReportDir/test/jacocoTestReport.xml"
+//    readmePath "$projectDir/README.md"
+//    // since v0.2.0, percentage limitation (0-100) for different type of coverage
+//    limit = ['instruction': 0, 'branch': 0, 'line': 0, 'method': 0, 'class': 0]
 }
 
 test {
+
+    useJUnitPlatform()
+
+    finalizedBy jacocoTestReport // report is always generated after tests run
+
     filter {
 //        excludeTestsMatching "io.*.*.lowlevel.restclient.*"
-        excludeTestsMatching "io.*.*.client._types.*"
+//        excludeTestsMatching "io.*.*.client._types.*"
         excludeTestsMatching "io.*.*.client.usage.*"
-        excludeTestsMatching "io.*.*.client.transport.*"
+//        excludeTestsMatching "io.*.*.client.transport.*"
     }
 }
 
-tasks.named('taskTree').configure {
-    depth = 3 // limit tree depth to 3. Equivalent to the --depth CLI task option.
-    withInputs = true // prints task inputs in red just below the task in the tree. Equivalent to the --with-inputs CLI task option.
-    withOutputs = true // prints task inputs in red just below the task in the tree. Equivalent to the --with-outputs CLI task option.
-    repeat = true  // allows printing a sub-tree in the task-tree more than once. Equivalent to the --repeat CLI task option
-    impliesSubProjects = true  // disables printing task-tree for child projects in a multi-project
-}
+//tasks.named('taskTree').configure {
+//    depth = 3 // limit tree depth to 3. Equivalent to the --depth CLI task option.
+//    withInputs = true // prints task inputs in red just below the task in the tree. Equivalent to the --with-inputs CLI task option.
+//    withOutputs = true // prints task inputs in red just below the task in the tree. Equivalent to the --with-outputs CLI task option.
+//    repeat = true  // allows printing a sub-tree in the task-tree more than once. Equivalent to the --repeat CLI task option
+//    impliesSubProjects = true  // disables printing task-tree for child projects in a multi-project
+//}
