--- a/build-conventions/settings.gradle
+++ b/build-conventions/settings.gradle
@@ -1,3 +1,13 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        maven {
+            // replace the path with the actual path to the repository
+            url = uri('~/.m2/repository/convention-plugins/build/repo')
+        }
+    }
+}
+
 rootProject.name = 'build-conventions'
 
 dependencyResolutionManagement {
