--- a/java-client/build.gradle
+++ b/java-client/build.gradle
@@ -1,13 +1,16 @@
 plugins {
-    id 'org.library-conventions'
+    id 'io.github.library-conventions'
     id 'jacoco-report-aggregation'
 }
 
+ext {
+    elasticsearchVersion = "8.5.2"
+}
+
 dependencies {
+
     api project(":lowlevel-restclient")
     api project(":temporaldata-service")
-//    api files("lowlevel-restclient/build/libs/lowlevel-restclient.jar")
-//    api files ("temporaldata/build/libs/temporaldata.jar")
 
     // elasticsearch
     implementation("co.elastic.clients:elasticsearch-java:${elasticsearchVersion}")
@@ -21,9 +24,6 @@ dependencies {
 
     api 'gg.jte:jte:2.2.3'
 
-    api("org.slf4j:slf4j-api:${slf4jVersion}")
-    api("ch.qos.logback:logback-classic:${logbackVersion}")
-    api("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
     implementation 'com.github.spotbugs:spotbugs-annotations:4.0.1'
 
     // testing
@@ -35,9 +35,6 @@ dependencies {
     testImplementation("io.github.classgraph:classgraph:4.8.147")
 
 //    testImplementation 'org.testcontainers:elasticsearch:1.17.6'
-    testImplementation 'org.assertj:assertj-core:3.23.1'
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
 }
 
 jar {
@@ -46,20 +43,6 @@ jar {
         configurations.compileClasspath.filter { it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
     }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-}
-
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
-}
-
-javadoc {
-    source = sourceSets.main.allJava
 }
 
 javadoc.options.addStringOption('Xdoclint:none', '-quiet')
@@ -122,10 +105,4 @@ publishing {
 
 signing {
     sign publishing.publications.mavenJava
-}
-
-test {
-    filter {
-//        excludeTestsMatching "io.*.*.client.transport.*"
-    }
 }
