--- a/build-conventions/build.gradle
+++ b/build-conventions/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'groovy-gradle-plugin'
+    id 'maven-publish'
 }
+
+group = 'io.github.conventions'
+version = '1.0'
 
 repositories {
     gradlePluginPortal() // so that external plugins can be resolved in dependencies section
@@ -8,15 +12,28 @@ repositories {
 
 dependencies {
     implementation "com.github.dawnwords:jacoco-badge-gradle-plugin:0.2.4"
-    implementation 'com.github.spotbugs.snom:spotbugs-gradle-plugin:5.0.0'
+    implementation "com.github.spotbugs.snom:spotbugs-gradle-plugin:5.0.13"
     testImplementation platform("org.spockframework:spock-bom:2.1-groovy-3.0")
     testImplementation 'org.spockframework:spock-core'
+}
+
+publishing {
+    repositories {
+        maven {
+            // change to point to your repo, e.g. http://my.org/repo
+            url = layout.buildDirectory.dir("repo")
+        }
+    }
+}
+
+tasks.named('publish') {
+    dependsOn('check')
 }
 
 test {
     filter {
         excludeTestsMatching "io.*.*.yelp-fusion.*"
-        excludeTestsMatching "io.*.*.LibraryPluginTest"
+//        excludeTestsMatching "io.*.LibraryPluginTest"
         excludeTestsMatching "io.*.*.lowlevel.restclient.*"
     }
 }
