--- a/build-conventions/src/main/groovy/io.github.java-conventions.gradle
+++ b/build-conventions/src/main/groovy/io.github.java-conventions.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id 'checkstyle'
     id 'jacoco'
     id 'idea'
@@ -7,22 +7,13 @@ plugins {
     id 'com.github.spotbugs'
 }
 
-import java.text.SimpleDateFormat
-
-group = 'io.github.stewseo'
+//import java.text.SimpleDateFormat
 
 version = file("../config/version.txt").text.trim()
 
-//task versionTxt()  {
-//    doLast {
-//        new File(rootProjectDir, "/config/version.txt").text = """
-//Version: $version
-//Revision: ${grgit.head().abbreviatedId}
-//Buildtime: ${new SimpleDateFormat("dd-MM-yyyy HH:mm:ss").format(new Date())}
-//Application-name: yelp-fusion-client
-//"""
-//    }
-//}
+spotbugs {
+    excludeFilter.set(file("../config/spotbugs_filter.xml"))
+}
 
 java {
     sourceCompatibility = "17"
@@ -30,14 +21,22 @@ java {
 }
 
 ext {
-    // elasticsearch
-    elasticsearchVersion = "8.5.2"
 
     // json
     jacksonVersion = "2.12.3"
     jakartaVersion = '2.0.1'
     jakartaJsonBindVersion = '2.0.0'
     parssonVersion = '1.0.0'
+
+    // commons
+    commonscodecVersion = '1.11'
+    commonsioVersion = '2.4'
+    commonsloggingVersion = '1.2'
+
+    // http components
+    httpasyncclientVersion = '4.1.5'
+    httpcoreVersion = '4.4.12'
+    httpclientVersion = '4.5.10'
 
     // logging
     slf4jVersion = '2.0.4'
@@ -54,11 +53,33 @@ repositories {
 
 dependencies {
 
+    api("commons-io:commons-io:${commonsioVersion}")
+    api("commons-codec:commons-codec:${commonscodecVersion}")
+
+    // apache http components
+    api "org.apache.httpcomponents:httpclient:${httpclientVersion}"
+    api "org.apache.httpcomponents:httpcore:${httpcoreVersion}"
+    api "org.apache.httpcomponents:httpasyncclient:${httpasyncclientVersion}"
+    api "org.apache.httpcomponents:httpcore-nio:${httpcoreVersion}"
+
+    api("org.slf4j:slf4j-api:${slf4jVersion}")
+
+    api("ch.qos.logback:logback-classic:${logbackVersion}")
+
+    api("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
+
+    configurations.all {
+        exclude group: "commons-logging", module: "commons-logging"
+    }
+
+    testImplementation 'org.assertj:assertj-core:3.23.1'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
 }
 
 // No Warnings
 checkstyle {
-    config = resources.text.fromString(io.github.stewseo.CheckstyleUtil.getCheckstyleConfig("/checkstyle.xml"))
+    config = resources.text.fromString(com.example.CheckstyleUtil.getCheckstyleConfig("/checkstyle.xml"))
     maxWarnings = 0
 }
 
@@ -67,6 +88,19 @@ tasks.withType(JavaCompile).configureEach {
     options.compilerArgs << "-Xlint:deprecation"
 }
 
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+javadoc {
+    source = sourceSets.main.allJava
+}
 
 jacoco {
     toolVersion = "0.8.8"
@@ -75,13 +109,21 @@ jacoco {
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
-        csv.enabled true
         html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
     }
     dependsOn test // tests are required to run before generating the report
 }
+
+//task versionTxt()  {
+//    doLast {
+//        new File(rootProjectDir, "/config/version.txt").text = """
+//Version: $version
+//Revision: ${grgit.head().abbreviatedId}
+//Buildtime: ${new SimpleDateFormat("dd-MM-yyyy HH:mm:ss").format(new Date())}
+//Application-name: yelp-fusion-client
+//"""
+//    }
+//}
 
 //// Do not generate reports for individual projects
 //tasks.named("jacocoTestReport") {
