--- a/lowlevel-restclient/build.gradle
+++ b/lowlevel-restclient/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-    id 'java-library'
-    id 'org.java-conventions'
+    id 'io.github.java-conventions'
 }
 
 group = 'io.github.stewseo'
@@ -16,51 +15,30 @@ repositories {
 }
 
 ext {
-
-    // json
-    jacksonVersion = "2.12.3"
-    jakartaVersion = '2.0.1'
-    jakartaJsonBindVersion = '2.0.0'
-
-    // commons
-    commonscodecVersion = '1.11'
-    commonsioVersion = '2.4'
-    commonsloggingVersion = '1.2'
-
-    // http components
-    httpasyncclientVersion = '4.1.5'
-    httpcoreVersion = '4.4.12'
-    httpclientVersion = '4.5.10'
-
-    // logging
-    slf4jVersion = '2.0.4'
-    logbackVersion = '1.4.1'
     randomizedRunnerVersion = '2.8.1'
     jUnit4Version = '4.13.2'
-    jUnit5Version = '5.9.0'
     hamcrestVersion = '2.2'
-    assertJCoreVersion = '3.23.1'
 }
 
 
 dependencies {
     // apache commons
-    api("commons-io:commons-io:${commonsioVersion}")
-    api("commons-codec:commons-codec:${commonscodecVersion}")
+//    api("commons-io:commons-io:${commonsioVersion}")
+//    api("commons-codec:commons-codec:${commonscodecVersion}")
+//
+//    // apache http components
+//    api "org.apache.httpcomponents:httpclient:${httpclientVersion}"
+//    api "org.apache.httpcomponents:httpcore:${httpcoreVersion}"
+//    api "org.apache.httpcomponents:httpasyncclient:${httpasyncclientVersion}"
+//    api "org.apache.httpcomponents:httpcore-nio:${httpcoreVersion}"
 
-    // apache http components
-    api "org.apache.httpcomponents:httpclient:${httpclientVersion}"
-    api "org.apache.httpcomponents:httpcore:${httpcoreVersion}"
-    api "org.apache.httpcomponents:httpasyncclient:${httpasyncclientVersion}"
-    api "org.apache.httpcomponents:httpcore-nio:${httpcoreVersion}"
-
-    // loggers
-    api("org.slf4j:slf4j-api:${slf4jVersion}")
-    api("ch.qos.logback:logback-classic:${logbackVersion}")
-    api("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
-    configurations.all {
-        exclude group: "commons-logging", module: "commons-logging"
-    }
+//    // loggers
+//    api("org.slf4j:slf4j-api:${slf4jVersion}")
+//    api("ch.qos.logback:logback-classic:${logbackVersion}")
+//    api("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
+//    configurations.all {
+//        exclude group: "commons-logging", module: "commons-logging"
+//    }
 
     api "com.carrotsearch.randomizedtesting:randomizedtesting-runner:${slf4jVersion}"
     api "junit:junit:${jUnit4Version}"
@@ -71,23 +49,6 @@ dependencies {
     api 'net.bytebuddy:byte-buddy:1.12.9'
     api 'org.objenesis:objenesis:3.2'
 
-    testImplementation "org.assertj:assertj-core:${assertJCoreVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnit5Version}"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnit5Version}"
-}
-
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
-}
-
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-repositories {
-    mavenCentral()
 }
 
 jar {
