--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,12 @@
 rootProject.name = 'yelp-fusion-client'
 
-//include 'java-client', 'lowlevel-restclient', 'temporaldata-service'
+include 'lowlevel-restclient', 'java-client', 'temporaldata-service'
 
 includeBuild 'build-conventions'
+
+//List projects = [
+//        'lowlevel-restclient', 'java-client', 'temporaldata-service'
+//]
 
 dependencyResolutionManagement {
     versionCatalogs {
@@ -11,9 +15,6 @@ dependencyResolutionManagement {
         }
     }
 }
-List projects = [
-        'lowlevel-restclient', 'java-client', 'temporaldata-service'
-]
 
 /**
  * Iterates over sub directories, looking for build.gradle, and adds a project if found
@@ -22,44 +23,26 @@ List projects = [
  * all files/directories in the source tree to find all projects.
  */
 
-void addSubProjects(String path, File dir) {
-    if (!dir.isDirectory()) return;
-    if (dir.name == 'buildSrc') return;
-    if (!new File(dir, 'build.gradle').exists()) return;
-    if (findProject(dir) != null) return;
-
-    final String projectName = "${path}:${dir.name}"
-
-    include projectName
-    if (path.isEmpty() || path.startsWith(':example-plugins')) {
-        project(projectName).projectDir = dir
-    }
-    for (File subdir : dir.listFiles()) {
-        addSubProjects(projectName, subdir)
-    }
-}
-
-//addSubProjects('', new File(rootProject.projectDir, 'libs'))
-//addSubProjects('', new File(rootProject.projectDir, 'plugins'))
-//addSubProjects('test', new File(rootProject.projectDir, 'test/external-modules'))
-
-include projects.toArray(new String[0])
-
-//project(":example").children.each { libsProject ->
-//    libsProject.name = "name-${libsProject.name}"
-//    libsProject.children.each { lp ->
-//        lp.name = lp.name  // for :libs:elasticsearch-x-content:impl
+//void addSubProjects(String path, File dir) {
+//    if (!dir.isDirectory()) return;
+//    if (dir.name == 'buildSrc') return;
+//    if (!new File(dir, 'build.gradle').exists()) return;
+//    if (findProject(dir) != null) return;
+//
+//    final String projectName = "${path}:${dir.name}"
+//
+//    include projectName
+//    for (File subdir : dir.listFiles()) {
+//        addSubProjects(projectName, subdir)
 //    }
 //}
 
-//project(":test:external-modules").children.each { testProject ->
-//    testProject.name = "test-${testProject.name}"
-//}
+//include projects.toArray(new String[0])
 
-File extraProjects = new File(rootProject.projectDir.parentFile, "${rootProject.projectDir.name}-extra")
-if (extraProjects.exists()) {
-    for (File extraProjectDir : extraProjects.listFiles()) {
-        addSubProjects('', extraProjectDir)
-    }
-}
+//File extraProjects = new File(rootProject.projectDir.parentFile, "${rootProject.projectDir.name}-extra")
+//if (extraProjects.exists()) {
+//    for (File extraProjectDir : extraProjects.listFiles()) {
+//        addSubProjects('', extraProjectDir)
+//    }
+//}
 
