--- a/temporaldata-service/build.gradle
+++ b/temporaldata-service/build.gradle
@@ -1,45 +1,16 @@
 plugins {
-    id 'java-library'
-    id 'org.java-conventions'
-}
-
-java {
-    sourceCompatibility = "17"
-    targetCompatibility = "17"
-}
-
-group 'io.github.stewseo'
-version '1.0.7'
-
-repositories {
-    mavenCentral()
+    id 'io.github.java-conventions'
 }
 
 dependencies {
-
     api 'com.breinify:brein-api-library-java:2.2.0'
     api 'com.breinify:brein-time-utilities:1.8.0'
     api 'com.mashape.unirest:unirest-java:1.4.9'
     api 'com.sun.jersey:jersey-client:1.19.4'
 }
 
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
-}
-
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-repositories {
-    mavenCentral()
-}
-
 jar {
-    archiveFileName = 'temporaldata.jar'
-    archiveVersion = '1.0.7'
+    archiveFileName = 'temporaldata-service.jar'
     from {
         configurations.compileClasspath.filter { it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
     }
