--- a/build-conventions/build.gradle
+++ b/build-conventions/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation("org.slf4j:slf4j-api:${slf4jVersion}")
     implementation("ch.qos.logback:logback-classic:${logbackVersion}")
 
+//    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "com.github.dawnwords:jacoco-badge-gradle-plugin:0.2.4"
     implementation "com.github.spotbugs.snom:spotbugs-gradle-plugin:5.0.13"
     testImplementation platform("org.spockframework:spock-bom:2.1-groovy-3.0")
