--- a/build-conventions/src/main/groovy/io.github.stewseo.java-conventions.gradle
+++ b/build-conventions/src/main/groovy/io.github.stewseo.java-conventions.gradle
@@ -17,7 +17,7 @@ plugins {
 
 group = 'io.github.stewseo'
 version = PROJECT_VERSION
-
+println version
 
 /*****************************************************************************
  *         java                                                             *
@@ -28,9 +28,16 @@ java {
     sourceCompatibility = JavaVersion.VERSION_17
 }
 
-// Enable deprecation messages when compiling Java code
 tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs << "-Xlint:deprecation"
+    javaCompiler = javaToolchains.compilerFor {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+    // Enable deprecation messages when compiling Java code
+    options.compilerArgs << '-Xlint:none'
+    options.encoding = 'UTF-8'
+    if (it.name == 'classesJava17') {
+        options.release = 17
+    }
 }
 
 /*****************************************************************************
@@ -40,7 +47,7 @@ tasks.withType(JavaCompile).configureEach {
 // No Warnings
 checkstyle {
     config = resources.text.fromString(io.github.stewseo.CheckstyleUtil.getCheckstyleConfig(CHECKSTYLE_CONFIG))
-    maxWarnings = 0
+    maxWarnings = 1
 }
 
 /*****************************************************************************
@@ -61,7 +68,7 @@ spotbugs {
 //    onlyAnalyze = ['io.*.*.temporaldata.service.*', 'io.github.stewseo.lowlevel.restclient.*']
     projectName = name
     release = version
-    extraArgs = [ '-nested:false' ]
+//    extraArgs = [ '-nested:false' ]
     jvmArgs = [ '-Duser.language=ja' ]
     maxHeapSize = '512m'
 }
@@ -209,6 +216,10 @@ ext {
 
 dependencies {
 
+    configurations.all {
+        exclude group: "commons-logging", module: "commons-logging"
+    }
+
     api("commons-io:commons-io:${commonsioVersion}")
     api("commons-codec:commons-codec:${commonscodecVersion}")
 
@@ -216,9 +227,7 @@ dependencies {
     api("ch.qos.logback:logback-classic:${logbackVersion}")
     api("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
 
-    configurations.all {
-        exclude group: "commons-logging", module: "commons-logging"
-    }
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
 
     testImplementation 'org.assertj:assertj-core:3.23.1'
     testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"
