--- a/client-yelpfusion/build.gradle
+++ b/client-yelpfusion/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'jacoco-report-aggregation'
 }
 
+group = 'io.github.stewseo'
 /*****************************************************************************
  *         java version                                                     *
  *****************************************************************************/
