--- a/gradle.properties
+++ b/gradle.properties
@@ -20,18 +20,21 @@ systemProp.jdk.tls.client.protocols=TLSv1.2
 #org.gradle.java.installations.fromEnv=JAVA_TOOLCHAIN_HOME,JAVA_HOME,RUNTIME_JAVA_HOME,JAVA19_HOME,JAVA18_HOME,JAVA17_HOME,JAVA16_HOME,JAVA15_HOME,JAVA14_HOME,JAVA13_HOME,JAVA12_HOME,JAVA11_HOME,JAVA8_HOME
 
 # log some dependency verification info to console
-#org.gradle.dependency.verification.console=verbose
+org.gradle.dependency.verification.console=verbose
 
-GROUP=io.github.stewseo
 PROJECT_VERSION=2.0.0
+GROUP=io.github.stewseo
+
+CONVENTIONS_GROUP=io.github.stewseo.conventions
+
 CHECKSTYLE_CONFIG=config/checkstyle/checkstyle.xml
+SPOTBUGS_HOME=config/spotbugs
 
 POM_INCEPTION_YEAR=2022
 POM_PACKAGING=jar
 POM_URL=https://github.com/stewseo/yelp-fusion-client
 
-#POM_ISSUE_SYSTEM=github
-
+POM_ISSUE_SYSTEM=github
 POM_SCM_URL=https://github.com/stewseo/yelp-fusion-client
 POM_SCM_CONNECTION=scm:git:git://github.com/stewseo/yelp-fusion-client.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/ben-manes/stewseo/yelp-fusion-client.git
