--- a/build-conventions/src/main/groovy/io.github.stewseo.java-conventions.gradle
+++ b/build-conventions/src/main/groovy/io.github.stewseo.java-conventions.gradle
@@ -5,17 +5,17 @@
 plugins {
     id 'java-library'
     id 'checkstyle'
-    id 'jacoco'
-    id 'idea'
-    id 'com.github.dawnwords.jacoco.badge'
     id 'com.github.spotbugs'
+    id 'jacoco'
+    id "org.sonarqube"
+    id 'com.github.dawnwords.jacoco.badge'
 }
 
 /*****************************************************************************
  *         all java projects                                                 *
  *****************************************************************************/
 
-group = 'io.github.stewseo'
+group = GROUP
 version = PROJECT_VERSION
 
 /*****************************************************************************
@@ -102,89 +102,83 @@ spotbugsTest {
 
 jacoco {
     toolVersion = "0.8.8"
-    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
+//    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
+}
+
+//jacocoTestReport {
+//    reports {
+//        xml.required = false
+//        csv.required = false
+//        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+//    }
+//    dependsOn test // tests are required to run before generating the report
+//}
+
+//task codeCoverageReport(type: JacocoReport) {
+//
+//    // Gather execution data from all subprojects
+////    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+//
+//    // Add sub project source sets defined in subproject build scripts
+//    subprojects.each {
+//        sourceSets it.sourceSets.main
+//    }
+//
+//    reports {
+//        xml.enabled false
+//        csv.enabled false
+//        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+//    }
+//}
+
+tasks.register("codeCoverageReport", JacocoReport) {
+    // If a subproject applies the 'jacoco' plugin, add the result it to the report
+    subprojects { subproject ->
+        subproject.plugins.withType(JacocoPlugin).configureEach {
+            subproject.tasks.matching({ t -> t.extensions.findByType(JacocoTaskExtension) }).configureEach { testTask ->
+                //the jacoco extension may be disabled for some projects
+                if (testTask.extensions.getByType(JacocoTaskExtension).isEnabled()) {
+                    sourceSets subproject.sourceSets.main
+                    executionData(testTask)
+                } else {
+                    logger.warn('Jacoco extension is disabled for test task \'{}\' in project \'{}\'. this test task will be excluded from jacoco report.', testTask.getName(), subproject.getName())
+                }
+            }
+
+            // To automatically run `test` every time `./gradlew codeCoverageReport` is called,
+            // you may want to set up a task dependency between them as shown below.
+            // Note that this requires the `test` tasks to be resolved eagerly (see `forEach`) which
+            // may have a negative effect on the configuration time of your build.
+            subproject.tasks.matching({ t -> t.extensions.findByType(JacocoTaskExtension) }).forEach {
+                rootProject.tasks.codeCoverageReport.dependsOn(it)
+            }
+        }
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectName", name
+        property "sonar.projectKey", name
+//        property "sonar.verbose", true
+        property "sonar.coverage.jacoco.xmlReportPaths",
+                "$projectDir.parentFile.path/build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml"
+    }
 }
 
 jacocoTestReport {
     reports {
-        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+        xml.enabled true
+        html.enabled true
     }
-    dependsOn test // tests are required to run before generating the report
 }
 
 jacocoBadgeGenSetting {
-    jacocoReportPath  "$buildDir/customJacocoReportDir/test/jacocoTestReport.xml"
+    jacocoReportPath  "$projectDir.parentFile.path/build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml"
     readmePath "../README.md"
     // since v0.2.0, percentage limitation (0-100) for different type of coverage
     limit = ['instruction': 0, 'branch': 0, 'line': 0, 'method': 0, 'class': 0]
 }
-//task versionTxt()  {
-//    doLast {
-//        new File(rootProjectDir, "/config/version.txt").text = """
-//Version: $version
-//Revision: ${grgit.head().abbreviatedId}
-//Buildtime: ${new SimpleDateFormat("dd-MM-yyyy HH:mm:ss").format(new Date())}
-//Application-name: yelp-fusion-client
-//"""
-//    }
-//}
-
-//// Do not generate reports for individual projects
-//tasks.named("jacocoTestReport") {
-//    enabled = false
-//}
-//
-//// Share sources output folder with other projects for aggregated JaCoCo reports
-//configurations.create('transitiveSourceOutputsElements') {
-//    visible = false
-//    canBeResolved = false
-//    canBeConsumed = true
-//    extendsFrom(configurations.implementation)
-//    attributes {
-//        attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
-//        attribute(Category.CATEGORY_ATTRIBUTE, objects.named(Category, Category.DOCUMENTATION))
-//        attribute(DocsType.DOCS_TYPE_ATTRIBUTE, objects.named(DocsType, 'source-output-folders'))
-//    }
-//    // Use main.output if you have groovy, scala or kotlin other than java in your project
-//    sourceSets.main.output.classesDirs.forEach {
-//        outgoing.artifact(it)
-//    }
-//}
-//
-//// Share sources folder with other projects for aggregated JaCoCo reports
-//configurations.create('transitiveSourcesElements') {
-//    visible = false
-//    canBeResolved = false
-//    canBeConsumed = true
-//    extendsFrom(configurations.implementation)
-//    attributes {
-//        attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
-//        attribute(Category.CATEGORY_ATTRIBUTE, objects.named(Category, Category.DOCUMENTATION))
-//        attribute(DocsType.DOCS_TYPE_ATTRIBUTE, objects.named(DocsType, 'source-folders'))
-//    }
-//    sourceSets.main.output.classesDirs.forEach {
-//        outgoing.artifact(it)
-//    }
-//}
-//
-//// Share the coverage data to be aggregated for the whole product
-//configurations.create('coverageDataElements') {
-//    visible = false
-//    canBeResolved = false
-//    canBeConsumed = true
-//    extendsFrom(configurations.implementation)
-//    attributes {
-//        attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
-//        attribute(Category.CATEGORY_ATTRIBUTE, objects.named(Category, Category.DOCUMENTATION))
-//        attribute(DocsType.DOCS_TYPE_ATTRIBUTE, objects.named(DocsType, 'jacoco-coverage-data'))
-//    }
-//    // This will cause the test task to run if the coverage data is requested by the aggregation task
-//    outgoing.artifact(tasks.named("test").map { task ->
-//        task.extensions.getByType(JacocoTaskExtension).destinationFile
-//    })
-//}
-//
-
 
 /*****************************************************************************
  *         java-conventions  dependencies                                   *
