--- a/gradle.properties
+++ b/gradle.properties
@@ -9,15 +9,15 @@ org.gradle.parallel=true
 
 systemProp.org.gradle.dependency.duplicate.project.detection=false
 
-#POM_INCEPTION_YEAR=2022
-#POM_PACKAGING=jar
-#POM_URL=https://github.com/stewseo/yelp-fusion-client
-#
-#POM_ISSUE_SYSTEM=github
-#POM_SCM_URL=https://github.com/stewseo/yelp-fusion-client
-#POM_SCM_CONNECTION=scm:git:git://github.com/stewseo/yelp-fusion-client.git
-#POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/ben-manes/stewseo/yelp-fusion-client.git
-#
-#POM_LICENSE_NAME=The Apache Software License, Version 2.0
-#POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
-#POM_LICENSE_DIST=repo
+POM_INCEPTION_YEAR=2022
+POM_PACKAGING=jar
+POM_URL=https://github.com/stewseo/yelp-fusion-client
+
+POM_ISSUE_SYSTEM=github
+POM_SCM_URL=https://github.com/stewseo/yelp-fusion-client
+POM_SCM_CONNECTION=scm:git:git://github.com/stewseo/yelp-fusion-client.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/ben-manes/stewseo/yelp-fusion-client.git
+
+POM_LICENSE_NAME=The Apache Software License, Version 2.0
+POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENSE_DIST=repo
