--- a/lowlevel-restclient/build.gradle
+++ b/lowlevel-restclient/build.gradle
@@ -57,6 +57,7 @@ test {
 //    filter {
 //        excludeTestsMatching "io.*.*.lowlevel.restclient.CustomStringSubscriberTest"
 //    }
+    useJUnitPlatform()
 }
 
 /*****************************************************************************
