--- a/build-conventions/src/main/groovy/java-conventions.gradle
+++ b/build-conventions/src/main/groovy/java-conventions.gradle
@@ -27,6 +27,8 @@ version = '1.7.4'
 java {
     targetCompatibility = JavaVersion.VERSION_17
     sourceCompatibility = JavaVersion.VERSION_17
+    withJavadocJar()
+    withSourcesJar()
 }
 
 jar {
@@ -64,7 +66,7 @@ tasks.withType(JavaCompile) {
 // No Warnings
 checkstyle {
     config = resources.text.fromString(io.github.stewseo.CheckstyleUtil.getCheckstyleConfig("$rootDir/config/checkstyle/checkstyle.xml"))
-    maxWarnings = 1
+    maxWarnings = 0
 }
 
 /*****************************************************************************
@@ -75,10 +77,11 @@ spotbugs {
     ignoreFailures = true
     showStackTraces = true
     showProgress = false
-    // adjusts internal flags of SpotBugs to reduce computation cost by lowering the prediction. min, max, more, max
     effort = 'default'
     reportsDir = file("${buildDir}/reports/spotbugs")
+    // from root directory: config/spotbugs/spotbugs-include.xml
     includeFilter = file("${rootDir}/config/spotbugs/spotbugs-include.xml")
+    // from project directory: config/spotbugs/spotbugs-include.xml
     excludeFilter = file("${projectDir}/config/spotbugs/spotbugs-exclude.xml")
 }
 
@@ -125,9 +128,9 @@ dependencies {
         exclude group: "commons-logging", module: "commons-logging"
     }
 
-    compileOnly 'com.github.spotbugs:spotbugs-annotations:4.0.1'
 
-    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
+    compileOnly buildLibs.spotbugs
+    compileOnly buildLibs.javax.annotation.api
 
     testImplementation buildLibs.assertJ
     testImplementation buildLibs.junit.jupiter.api
@@ -135,8 +138,12 @@ dependencies {
 }
 
 /*****************************************************************************
- *         tasks to print project pathing                                   *
+ *         testing                                                          *
  *****************************************************************************/
+
+test {
+    useJUnitPlatform()
+}
 
 tasks.register('printPaths') {
     doLast {
