--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,9 @@ org.gradle.parallel=true
 
 systemProp.org.gradle.dependency.duplicate.project.detection=false
 
+POM_NAME=YelpFusionJavaClient
+POM_ARTIFACT_ID=yelp-fusion-client
+POM_GROUP_ID=io.github.stewseo
 POM_INCEPTION_YEAR=2022
 POM_PACKAGING=jar
 POM_URL=https://github.com/stewseo/yelp-fusion-client
@@ -21,3 +24,7 @@ POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/ben-manes/stewseo/yelp-fusio
 POM_LICENSE_NAME=The Apache Software License, Version 2.0
 POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENSE_DIST=repo
+
+DEV_ID=stewseo
+DEV_NAME=Stew seo
+DEV_EMAIL=stewart.s.seo@gmail.com
