add interface ResponseTestCase. add abstract class YelpFusionResponseTestCase

--- a/clients/build.gradle
+++ b/clients/build.gradle
@@ -46,6 +46,9 @@ dependencies {
  *         :testing                                                         *
  *****************************************************************************/
 
+test {
+}
+
 /*****************************************************************************
  *         publishing                                                       *
  *****************************************************************************/
