--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,9 @@
 org.gradle.jvmargs=-Xmx2500m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 
-org.gradle.caching=true
-
-org.gradle.unsafe.configuration-cache=true
-org.gradle.unsafe.configuration-cache-problems=warn
-
+#org.gradle.caching=true
+#org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache-problems=warn
 #org.gradle.unsafe.configuration-cache.max-problems=5
 
 systemProp.org.gradle.dependency.duplicate.project.detection=false
