--- a/clients/build.gradle
+++ b/clients/build.gradle
@@ -47,6 +47,11 @@ dependencies {
  *****************************************************************************/
 
 test {
+    filter {
+        excludeTestsMatching "io.github.stewseo.clients.json.*"
+        excludeTestsMatching "io.github.stewseo.clients.elasticsearch.*"
+        excludeTestsMatching "io.github.stewseo.clients.util.*"
+    }
 }
 
 /*****************************************************************************
